CSP working but not very safe. Working to make it safer.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,38 @@ pylint = "*"
 [packages]
 django = "*"
 gunicorn = "*"
+asgiref = "*"
+astroid = "*"
+certifi = "*"
+chardet = "*"
+django-crispy-forms = "*"
+django-el-pagination = "*"
+django-extensions = "*"
+goodreads = "*"
+idna = "*"
+isort = "*"
+lazy-object-proxy = "*"
+mccabe = "*"
+nose = "*"
+Pillow = "*"
+pkg-resources = "*"
+psycopg2 = "*"
+pylint = "*"
+pytz = "*"
+rauth = "*"
+requests = "*"
+six = "*"
+sorl-thumbnail = "*"
+sqlparse = "*"
+typed-ast = "*"
+urllib3 = "*"
+wrapt = "*"
+xmltodict = "*"
+whitenoise = "*"
+dj-database-url = "*"
+uwsgi = "*"
+django-csp = "*"
+django-extensions = "*"
 
 [requires]
 python_version = "3.7"
