--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ Django = "==3.0.5"
 django-crispy-forms = "==1.9.0"
 django-csp = "==3.6"
 django-el-pagination = "==3.3.0"
+django-heroku = "==0.3.1"
+python-dotenv = "==0.13.0"
 goodreads = "==0.3.2"
 gunicorn = "==20.0.4"
 idna = "==2.9"
@@ -37,6 +39,7 @@ urllib3 = "==1.25.8"
 whitenoise = "==5.1.0"
 wrapt = "==1.11.2"
 xmltodict = "==0.12.0"
+
 
 [requires]
 python_version = "3.7.5"
